Fixed overflow and side scrolling issue

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -49,7 +49,7 @@ h1,
 }
 
 .menu-link {
-  color: #422300;
+  color: #f4f6ff;
   border: solid 2px #fff;
   border-radius: 5px;
 }
